--- a/mese.html
+++ b/mese.html
@@ -106,8 +106,8 @@
                     <div class="row">
 
                         <img class="img-fluid" src="animacio/meseoldalfelirat1.gif" id="mozgoKep">
-                        <h2>
-                            A mesés rajzok, grafikák rendszerint A4-es papírra készültek
+                        <h2 id="cimmondat">
+                            A mesés rajzok, grafikák rendszerint A4-es papírra készültek.
                         </h2>
 
                         <br>
