--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -99,7 +99,7 @@
                 <div class="col-md-12 text-dark bg-secondary py-3 mb-2" id="elem" >
                    
                
-                  <fieldset class="d-inline-flex">
+                  <fieldset class="d-flex">
                       Vegye fel velünk a kapcsolatot:<br />
                          <a href = "https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src = "./pics/ico/fb_black_50x50.png" alt = "Facebook"><br>
                              <strong>Facebook</strong></a>
