--- a/restauralas.html
+++ b/restauralas.html
@@ -242,7 +242,7 @@
                     </ul>
                 </nav>
 
-                <div class="col-md-10 col-lg-9" id="content">
+                <div class="col-md-10 col-lg-9" id="content"> 
 
                     </button>
                     <div class="row">
@@ -279,10 +279,11 @@
                                         <div class="carousel-caption" id="elsoTema">
                                             <p>Sok-sok hiba közelről</p>
                                         </div>
-                                        <div class="kepek">
-                                            <img class="img-fluid" src=".\restauralas\az_ido_vasfoga\rest57.jpg" alt="ilyen volt">
+                                        <div class="kepek"  class="img-magnifier-container"class=".img-magnifier-glass">
+                                            <img id="r1" class="img-fluid" src=".\restauralas\az_ido_vasfoga\rest57.jpg" alt="ilyen volt">
                                         </div>
                                     </div>
+                                    <!-- <script>magnify("r1", 3);</script> -->
 
                                     <!--carousel elem--->
                                     <!--carousel elem--->
