--- a/restauralas.html
+++ b/restauralas.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/fonts.css" />
-    <link rel="stylesheet" type="text/css" href="./css/app.css" />
     <link rel="stylesheet" type="text/css" href="./css/restauralas.css" />
     <link href="https://fonts.googleapis.com/css?family=Barrio|Bungee+Inline|Hind+Siliguri|Miniver|PT+Serif|Zilla+Slab+Highlight&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
@@ -275,15 +273,15 @@
                                         </div>
                                     </div>
 
-                                    <div class="carousel-item ">
-                                        <div class="carousel-caption" id="elsoTema">
+                                    <div class="carousel-item">
+                                        <div class="carousel-caption" id="elsoTema"  class=".img-magnifier-container">
                                             <p>Sok-sok hiba közelről</p>
                                         </div>
-                                        <div class="kepek"  class="img-magnifier-container"class=".img-magnifier-glass">
-                                            <img id="r1" class="img-fluid" src=".\restauralas\az_ido_vasfoga\rest57.jpg" alt="ilyen volt">
+                                        <div class="kepek" class=".img-magnifier-container"  >
+                                            <img  id="r1" class="img-fluid" src=".\restauralas\az_ido_vasfoga\rest57.jpg" alt="ilyen volt">
                                         </div>
                                     </div>
-                                    <!-- <script>magnify("r1", 3);</script> -->
+                                   
 
                                     <!--carousel elem--->
                                     <!--carousel elem--->
@@ -463,6 +461,7 @@
     <script src="./js/bootstrap.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/restauralas.js"></script>
+    <script src="./js/kepnagyitas.js"></script>
 </body>
 
 </html>
