--- a/mese.html
+++ b/mese.html
@@ -106,9 +106,12 @@
                     <div class="row">
 
                         <img class="img-fluid" src="animacio/meseoldalfelirat1.gif" id="mozgoKep">
-                        <h2 id="cimmondat">
-                            A mesés rajzok, grafikák rendszerint A4-es papírra készültek.
-                        </h2>
+                        <aside id="rSide">
+                            <h2 id="cimmondat">
+                                A mesés rajzok<br> grafikák<br> rendszerint
+                                <br> A4-es papírra<br> készültek. </h2>
+                        </aside>
+
 
                         <br>
                     </div>
