--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+<html lang="hu">
 
 <head>
-    <meta name="author" content="Nagy Zoltán">
     <meta charset="utf-8">
+    <meta name="description" content="Golyamuhely">
+    <meta name = "keywords" content="festmeny,restauralas,butor,grafika">
+    <meta name= "author" content="Nagy Zoltán">
     <title>Golyamuhely</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -23,23 +25,23 @@
 <body>
 
 
-    <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
+    <nav class="navbar navbar-expand-md  navbar-dark bg-info">
 
 
         <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
 
+       
 
             <a class="navbar-brand" href="index.html">
-                Gólyaműhely<br />
+               <h1> Gólyaműhely</h1><br />
                 <img src = "./pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img">
                </a>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
 
 
-
-            <div class="collapse navbar-collapse" id="navbarSupportContent">
+            <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
@@ -55,7 +57,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="restauralas.html">Restaurálás</a>
+                            <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
                             <a class="dropdown-item" href="grafika.html">Grafika</a>
                         </div>
                     </li>
@@ -173,7 +175,7 @@
                 <div class="col-sm-6 col-md-3 m-footer-contact">
 
                     <h4>Gólyaműhely</h4>
-                    <h6>BUDAPEST, 2020</h6><br />
+                    <h6><strong>Budapest, <br />2020-2022</strong></h6><br />
 
 
                 </div>
