--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -25,14 +25,14 @@
 <body>
     <nav class="navbar navbar-toggleable-md bg-success">
         <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class = "navbar-toggler-icon"></span> 
             </button>
             <a class="navbar-brand" href="index.html">
                 Gólyaműhely<br />
                 <img src = "./pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img" id="golyaslogo">
             </a>
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
