--- a/festmeny-restauralas.html
+++ b/festmeny-restauralas.html
@@ -1,9 +1,11 @@
 <html>
 
 <head>
-    <meta name="author" content="Nagy Zoltán">
     <meta charset="utf-8">
-    <title>Golyamuhely</title>
+    <meta name="author" content="Nagy Zoltán">
+    <meta name="description" content="Golyamuhely">
+    <meta name = "keywords" content="festmenyrestauralas">
+    <title>Festmeny-restauralas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -25,7 +27,7 @@
 
     <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
         <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class = "navbar-toggler-icon"></span> 
             </button>
             <a class="navbar-brand" href="index.html">
@@ -35,7 +37,7 @@
                 
             </a>
 
-            <div class="collapse navbar-collapse" id="navbarSupportContent">
+            <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
