--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -19,10 +19,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    
 </head>
 
 <body>
-    <header class="gray-bg">
+<!--     <header class="gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -33,10 +34,10 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
     <nav class="navbar navbar-toggleable-md  navbar-dark bg-info">
         <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class = "navbar-toggler-icon"></span> 
             </button>
             <a class="navbar-brand" href="index.html">
@@ -44,7 +45,7 @@
                 <img src = "./pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img">
             </a>
 
-            <div class="collapse navbar-collapse" id="navbarSupportContent">
+            <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
@@ -95,8 +96,8 @@
     </nav>
 
     <main>
-        <div class="container1">
-            <div class="col-md-12 text-dark bg-secondary py-3 mb-2" id="elem">
+        <div class=".container-fluid">
+            <div class="col-md-12 text-dark bg-secondary " id="backgroundPicture">
 
 
                 <fieldset class=".flex-column">
@@ -166,11 +167,11 @@
                         <li><a href="linkek.html">Linkek</a></li>
                         <li><a href="ajandekok.html">Ajándéktárgyak</a></li>
                         <li><a href="kedvencek.html">Kedvencek</a></li>
-                        <li><a href="kapcsolat.html">Kapcsolat</a></li>
-                        <li>
+                        <!-- <li><a href="kapcsolat.html">Kapcsolat</a></li> -->
+                        <!-- <li>
                             <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src="./pics/ico/fb_black_50x50.png" alt="Facebook"><br>Facebook</a>
-                        </li>
-                        <img src="./pics/ico/phone_50x50.png" alt="Image"><br />06-20-482-3933
+                        </li> -->
+                        <!-- <img src="./pics/ico/phone_50x50.png" alt="Image"><br />06-20-482-3933 -->
                     </ul>
                 </div>
 
