--- a/mozaik.html
+++ b/mozaik.html
@@ -26,7 +26,7 @@
 
 
         <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class = "navbar-toggler-icon"></span> 
             </button>
 
@@ -35,12 +35,12 @@
 
             <a class="navbar-brand" href="index.html">
                 Gólyaműhely<br />
-                <img src = "./pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img">
+                <img src = "./pics/ico/ahtale2.png" class = "rounded-circle logo" alt = "gólya" title = "Gólyaműhely" role = "img">
             </a>
 
 
 
-            <div class="collapse navbar-collapse" id="navbarSupportContent">
+            <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
@@ -56,7 +56,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="restauralas.html">Restaurálás</a>
+                            <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
 
                             <a class="dropdown-item" href="grafika.html">Grafika</a>
 
