index oldal csinosítva

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Golyamuhely">
-    <meta name = "keywords" content="festmeny,restauralas,butor,grafika">
-    <meta name= "author" content="Nagy Zoltán">
+    <meta name="keywords" content="festmeny,restauralas,butor,grafika">
+    <meta name="author" content="Nagy Zoltán">
     <title>Golyamuhely</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -15,36 +15,30 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="./css/app.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-
     <nav class="navbar navbar-expand-md  navbar-dark bg-info">
 
-
         <div class="container">
-
-       
-
-            <a class="navbar-brand" href="index.html">
-               <h1> Gólyaműhely</h1><br />
-                <img src = "./pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img">
-               </a>
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-                </button>
+            </button>
+            <a class="navbar-brand" href="index.html">
+                <h1>
+                    Gólyaműhely</h1>
+                <img src="./pics/ico/ahtale2.png" class="rounded-circle" alt="" title="Gólyaműhely" role="img">
+            </a>
 
 
             <div class="collapse navbar-collapse" id="hamburgermenü">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Főoldal<span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
@@ -53,15 +47,14 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="referenciak.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Referenciák
-                        </a>
+                                Referenciák
+                            </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
                             <a class="dropdown-item" href="grafika.html">Grafika</a>
                         </div>
                     </li>
-
 
                     <li class="nav-item">
                         <a class="nav-link" href="olajfestmenyek.html">Olajfestmény</a>
@@ -112,7 +105,6 @@
 
                             <img class="d-block img-fluid" src="./restauralas/akac_a_parton/DSCN1272.JPG" alt="First slide">
 
-
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Restaurálás---Akác a parton----</h5>
                             </div>
@@ -120,8 +112,7 @@
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="./restauralas/keleti_setalo_utca/DSCN1314.JPG" alt="Second slide">
 
-                            <img class="d-block img-fluid" class="secondSlide" src="./restauralas/keleti_setalo_utca/DSCN1313.JPG" alt="Second slide">
-
+                            <img class="secondSlide" src="./restauralas/keleti_setalo_utca/DSCN1313.JPG" alt="Second slide">
 
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Restaurálás---Keleti--sétálóutca----</h5>
@@ -131,8 +122,7 @@
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="./restauralas/lovak_a_tengerparton/DSCN1251.JPG" alt="Third slide">
 
-                            <img class="d-block img-fluid" class="secondSlide" src="./restauralas/lovak_a_tengerparton/DSCN1268.JPG" alt="Third slide">
-
+                            <img class="secondSlide" src="./restauralas/lovak_a_tengerparton/DSCN1268.JPG" alt="Third slide">
 
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Lovak-a-tengerparton----</h5>
@@ -142,8 +132,7 @@
                         <div class="carousel-item">
                             <img class="d-block img-fluid" src="./restauralas/festmeny_tisztitas/rest07.jpg" alt="Fourth slide">
 
-                            <img class="d-block img-fluid" class="secondSlide" src="./restauralas/festmeny_tisztitas/rest08.jpg" alt="Fourth slide">
-
+                            <img class="secondSlide" src="./restauralas/festmeny_tisztitas/rest08.jpg" alt="Fourth slide">
 
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Restaurálás---Festmény-tisztítás----</h5>
@@ -164,9 +153,6 @@
 
         </div>
 
-
-
-
     </main>
 
     <footer class="bg-info">
@@ -174,9 +160,12 @@
             <div class="row">
                 <div class="col-sm-6 col-md-3 m-footer-contact">
 
-                    <h4>Gólyaműhely</h4>
-                    <h6><strong>Budapest, <br />2020-2022</strong></h6><br />
-
+                    <h4>
+                        <b>Gólyaműhely</b></h4>
+                    <h6>
+                        Budapest,
+                        <br/>2020-2022
+                    </h6><br/>
 
                 </div>
                 <div class="col-sm-6 col-md-2 m-footer-nav">
@@ -190,20 +179,33 @@
                 <div class="col-sm-6 col-md-2 m-footer-nav">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
-                        <li><a href="olajfestmeny.html">Olajfestmény</a></li>
-                        <li><a href="grafika.html">Grafika</a></li>
-                        <li><a href="mozaik.html">Mozaik</a></li>
-                        <li><a href="butor.html">Bútor</a></li>
-                        <li><a href="mese.html">Mese</a></li>
+                        <li>
+                            <a href="olajfestmeny.html">Olajfestmény</a>
+                        </li>
+                        <li>
+                            <a href="grafika.html">Grafika</a>
+                        </li>
+                        <li>
+                            <a href="mozaik.html">Mozaik</a>
+                        </li>
+                        <li>
+                            <a href="butor.html">Bútor</a>
+                        </li>
+                        <li>
+                            <a href="mese.html">Mese</a>
+                        </li>
                     </ul>
                 </div>
-
 
                 <div class="col-sm-6 col-md-2 m-footer-nav">
                     <strong>Referenciák</strong>
                     <ul>
-                        <li><a href="restauralas.html">Restaurálás</a></li>
-                        <li><a href="mesegrafika.html">Mesegrafika</a></li>
+                        <li>
+                            <a href="restauralas.html">Restaurálás</a>
+                        </li>
+                        <li>
+                            <a href="mesegrafika.html">Mesegrafika</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -211,16 +213,28 @@
                     <strong>Információ</strong>
                     <ul>
 
-                        <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
-                        <li><a href="gyik.html">Kérdések és válaszok</a></li>
-                        <li><a href="linkek.html">Linkek</a></li>
-                        <li><a href="ajandekok.html">Ajándéktárgyak</a></li>
-                        <li><a href="kedvencek.html">Kedvencek</a></li>
-                        <li><a href="kapcsolat.html">Kapcsolat</a></li>
+                        <li>
+                            <a href="bemutatkozas.html">Bemutatkozás</a>
+                        </li>
+                        <li>
+                            <a href="gyik.html">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html">Kedvencek</a>
+                        </li>
+                        <li>
+                            <a href="kapcsolat.html">Kapcsolat</a>
+                        </li>
                         <li>
                             <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src="./pics/ico/fb_black_50x50.png" alt="Facebook"><br>Facebook</a>
                         </li>
-                        <img src="./pics/ico/phone_50x50.png" alt="Image"><br />06-20-482-3933
+                        <img src="./pics/ico/phone_50x50.png" alt="Image"><br/>06-20-482-3933
                     </ul>
                 </div>
             </div>
@@ -237,6 +251,5 @@
     <script src="./js/index.js"></script>
 
 </body>
-
 
 </html>
