--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -19,11 +19,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
     </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    
+
 </head>
 
 <body>
-<!--     <header class="gray-bg">
+    <!--     <header class="gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -61,7 +61,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Restaurálás</a>
+                            <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
                             <a class="dropdown-item" href="grafika.html">Grafika</a>
                         </div>
                     </li>
