--- a/mese.html
+++ b/mese.html
@@ -58,9 +58,9 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="restauralas.html">Restaurálás</a>
+                            <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
 
-                            <a class="dropdown-item" href="grafika.html">Mesegrafika</a>
+                            <a class="dropdown-item" href="./grafika.html">Mesegrafika</a>
                         </div>
                     </li>
 
