--- a/ajandektargyak.html
+++ b/ajandektargyak.html
@@ -48,7 +48,7 @@
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="restauralas.html">Restaurálás</a>
+                            <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
 
                             <a class="dropdown-item" href="grafika.html">Mesegrafika</a>
                         </div>
