--- a/olajfestmenyek.html
+++ b/olajfestmenyek.html
@@ -182,7 +182,7 @@
                 <button type="button" class="btn btn-primary collapsed" data-toggle="collapse" data-target="#negyedikReszlet">Részletek</button>
                 <div id="negyedikReszlet" class="collapse">
                     <p>
-                        <b>Képméret: nincs adat</b>
+                        <b>Képméret: nincs adat</b>s
                     </p>
                 </div>
                 <div class="overlay ovrl-left ovrl-3"></div>
