--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="shortcut icon" href="./pics/ico/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="./css/app.css" />
     <link rel="stylesheet" type="text/css" href="./css/index.css">
 
@@ -23,6 +22,13 @@
 
 <body>
 
+    <header>
+        <div class="bg-dark">
+            <marquee behavior="scroll" direction="right">
+                <script src="js/nevnapok.js "></script>
+            </marquee>
+        </div>
+    </header>
     <nav class="navbar navbar-expand-md  navbar-dark bg-info">
 
         <div class="container">
@@ -36,9 +42,9 @@
             </a>
 
 
-            <div class=" collapse navbar-collapse " id="hamburgermenü ">
-                <ul class="navbar-nav ">
-                    <li class="nav-item active ">
+            <div class="collapse navbar-collapse" id="hamburgermenü">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
                         <a class="nav-link " href="index.html ">Főoldal<span class="sr-only ">(current)</span></a>
                     </li>
 
@@ -69,192 +75,177 @@
                     <li class="nav-item ">
                         <a class="nav-link " href="mese.html ">Mese</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="ajandektargyak.html ">Ajándéktárgyak</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ajandektargyak.html ">Ajándéktárgyak</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="kedvencek.html ">Kedvencek</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kedvencek.html ">Kedvencek</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link " href="kapcsolat.html ">Kapcsolat</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="kapcsolat.html ">Kapcsolat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="./pics/ico/fb_black_50x50.png " alt="Facebook " id="fbikon ">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <img src="./pics/ico/phone_50x50.png " alt="Image " id="telefonikon">
+                        <span class="menu_telefonszam">06-20-482-3933</span>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header>
-        <div class="bg-dark">
-            <marquee behavior="scroll" direction="right">
-                <script src="js/nevnapok.js "></script>
-            </marquee>
-        </div>
-    </header>
+
     <main>
-        <div class="row ">
-            <div class="col-md mx-auto mt-10" id="slide">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 
-                    <ul class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!--Indikátorok-->
+            <ul class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
 
-                    </ul>
-                    <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="./restauralas/akac_a_parton/DSCN1308.JPG " alt="First slide">
+            </ul>
+            <!--A diavetítés-->
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="img-fluid" src="./restauralas/akac_a_parton/ilyen_volt.JPG " alt="First slide">
 
-                            <img class="d-block img-fluid" src="./restauralas/akac_a_parton/DSCN1272.JPG " alt="First slide">
+                    <img class="img-fluid" src="./restauralas/akac_a_parton/keszen.JPG " alt="First slide">
 
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Restaurálás---Akác a parton----</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item ">
-                            <img class="d-block img-fluid" src="./restauralas/keleti_setalo_utca/DSCN1314.JPG " alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Restaurálás: Akác a parton</h5>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="img-fluid" src="./restauralas/keleti_setalo_utca/DSCN1314.JPG " alt="Second slide">
 
-                            <img class="secondSlide" src="./restauralas/keleti_setalo_utca/DSCN1313.JPG " alt="Second slide">
+                    <img class="img-fluid" class="secondSlide" src="./restauralas/keleti_setalo_utca/DSCN1313.JPG " alt="Second slide">
 
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Restaurálás---Keleti--sétálóutca----</h5>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Restaurálás: Keleti sétálóutca</h5>
 
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="./restauralas/lovak_a_tengerparton/DSCN1251.JPG " alt="Third slide">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="img-fluid" src="./restauralas/lovak_a_tengerparton/DSCN1251.JPG " alt="Third slide">
 
-                            <img class="secondSlide" src="./restauralas/lovak_a_tengerparton/DSCN1268.JPG " alt="Third slide">
+                    <img class="img-fluid" class="secondSlide" src="./restauralas/lovak_a_tengerparton/DSCN1268.JPG " alt="Third slide">
 
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Lovak-a-tengerparton----</h5>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Lovak a tengerparton</h5>
 
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="./restauralas/festmeny_tisztitas/rest07.jpg " alt="Fourth slide">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="img-fluid" src="./restauralas/festmeny_tisztitas1/ilyen_volt.jpg " alt="Fourth slide">
 
-                            <img class="secondSlide" src=" ./restauralas/festmeny_tisztitas/rest08.jpg" alt="Fourth slide">
+                    <img class="img-fluid" class="secondSlide" src=" ./restauralas/festmeny_tisztitas1/ilyen_lett.jpg" alt="Fourth slide">
 
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Restaurálás---Festmény-tisztítás----</h5>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Restaurálás: Festmény-tisztítás</h5>
 
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-flex img-fluid" src="./pics/carousel/oila01.jpg " alt="Fifth slide">
-                            <img class="d-flex img-fluid" src="./pics/carousel/oila02.jpg " alt="Fifth slide">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Olajfestmények</h5>
-                            </div>
-                        </div>
+                    </div>
+
+
+                </div>
+                <div class="carousel-item">
+                    <img src="./pics/carousel/oila01.jpg " alt="Fifth slide">
+                    <img src="./pics/carousel/oila02.jpg " alt="Fifth slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Olajfestmények</h5>
                     </div>
                 </div>
             </div>
-            <!---slide vége-->
-
         </div>
+        <!---slide vége-->
+
+
 
     </main>
+    <footer class="bg-info">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-3 m-footer-contact">
+                    <a class="navbar-brand" href="index.html">
 
-    <footer class="bg-info ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-sm-6 col-md-3 m-footer-contact ">
-
-                    <h4>
-                        <b>Gólyaműhely</b></h4>
-                    <h6>
-                        <strong>
-                           Budapest<br/>2020-2023 </strong>
-
-                    </h6><br/>
-
-                </div>
-                <div class="col-sm-6 col-md-2 m-footer-nav ">
-
-                    <div class="embed-responsive embed-responsive-4by3 ">
-                        <iframe class="embed-responsive-item " src="https://www.youtube.com/embed/7Clic1sbBcg?autoplay=1 "></iframe>
-                    </div>
-
+                        <h4>Gólyaműhely</h4>
+                        <h6>BUDAPEST, 2020</h6>
+                    </a>
                 </div>
 
-                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                <div class="col-sm-6 col-md-3 m-footer-nav">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
                         <li>
-                            <a href="olajfestmeny.html ">Olajfestmény</a>
+                            <a href="olajfestmeny.html">Olajfestmény</a>
                         </li>
                         <li>
-                            <a href="grafika.html ">Grafika</a>
+                            <a href="grafika.html">Grafika</a>
                         </li>
                         <li>
-                            <a href="mozaik.html ">Mozaik</a>
+                            <a href="mozaik.html">Mozaik</a>
                         </li>
                         <li>
-                            <a href="butor.html ">Bútor</a>
+                            <a href="butor.html">Bútor</a>
                         </li>
                         <li>
-                            <a href="mese.html ">Mese</a>
+                            <a href="mese.html">Mese</a>
                         </li>
                     </ul>
                 </div>
 
-                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                <div class="col-sm-6 col-md-3 m-footer-nav">
                     <strong>Referenciák</strong>
                     <ul>
                         <li>
-                            <a href="festmeny-restauralas.html ">Restaurálás</a>
+                            <a href="restauralas.html">Restaurálás</a>
                         </li>
                         <li>
-                            <a href="grafika.html ">Mesegrafika</a>
+                            <a href="mesegrafika.html">Mesegrafika</a>
                         </li>
                     </ul>
                 </div>
 
-                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                <div class="col-sm-6 col-md-3 m-footer-nav">
                     <strong>Információ</strong>
                     <ul>
 
                         <li>
-                            <a href="bemutatkozas.html ">Bemutatkozás</a>
+                            <a href="bemutatkozas.html">Bemutatkozás</a>
                         </li>
                         <li>
-                            <a href="gyik.html ">Kérdések és válaszok</a>
+                            <a href="gyik.html">Kérdések és válaszok</a>
                         </li>
                         <li>
-                            <a href="linkek.html ">Linkek</a>
+                            <a href="linkek.html">Linkek</a>
                         </li>
                         <li>
-                            <a href="ajandekok.html ">Ajándéktárgyak</a>
+                            <a href="ajandekok.html">Ajándéktárgyak</a>
                         </li>
                         <li>
-                            <a href="kedvencek.html ">Kedvencek</a>
+                            <a href="kedvencek.html">Kedvencek</a>
                         </li>
                         <li>
-                            <a href="kapcsolat.html ">Kapcsolat</a>
+                            <a href="kapcsolat.html">Kapcsolat</a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="./pics/ico/fb_black_50x50.png " alt="Facebook " id="fbikon ">
-                                </br>Facebook</a>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src="./pics/ico/fb_black_50x50.png" alt="Facebook"><br>Facebook</a>
                         </li>
-                        </br>
-                        </li>
-                        <img src="./pics/ico/phone_50x50.png " alt="Image " id="telefonikon ">
-                        </br>06-20-482-3933 </li>
+                        <img id="tel" src="./pics/ico/phone_50x50.png" alt="Image"><br/>06-20-482-3933
                     </ul>
                 </div>
+
             </div>
             <!---row vége--->
         </div>
         <!---container vége--->
     </footer>
 
+
     <script src=" ./js/jquery-3.1.1.slim.min.js "></script>
-    <srcipt src="./js/tether.min.js "></srcipt>
-    <script src="./js/bootstrap.min.js "></script>
-    <script src="./js/app.js "></script>
-    <script src="./js/bootstrap.js "></script>
-    <script src="./js/index.js "></script>
+
 
 </body>
 
