--- a/index.html
+++ b/index.html
@@ -42,33 +42,36 @@
 
 
                 <ul class="navbar-nav">
+                    <div class="top-row">
+                        <li class="nav-item active"><a class="nav-link " href="index.html ">Főoldal<span class="sr-only ">(current)</span></a></li>
+                        <li class="nav-item "><a class="nav-link " href="bemutatkozas.html ">Bemutatkozás</a></li>
+                        <li class="nav-item dropdown "><a class="nav-link dropdown-toggle " href="referenciak.html " id="navbarDropdownMenuLink " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">Referenciák </a>
+                            <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink "><a class="dropdown-item " href="festmeny-restauralas.html ">Restaurálás</a><a class="dropdown-item " href="grafika.html ">Grafika</a></div>
+                        </li>
+                        <li class="nav-item "><a class="nav-link " href="olajfestmenyek.html ">Olajfestmény</a></li>
+                        <li class="nav-item "><a class="nav-link " href="mozaik.html ">Mozaik</a></li>
+                        <li class="nav-item "><a class="nav-link " href="butor.html ">Bútor</a></li>
+                        <li class="nav-item "><a class="nav-link " href="mese.html ">Mese</a></li>
+                        <li class="nav-item"><a class="nav-link" href="ajandektargyak.html ">Ajándéktárgyak</a></li>
+                        <li class="nav-item"><a class="nav-link" href="kedvencek.html ">Kedvencek</a></li>
+                        <li class="nav-item"><a class="nav-link" href="kapcsolat.html ">Kapcsolat</a></li>
+                    </div>
 
-                    <li class="nav-item active"><a class="nav-link " href="index.html ">Főoldal<span class="sr-only ">(current)</span></a></li>
-                    <li class="nav-item "><a class="nav-link " href="bemutatkozas.html ">Bemutatkozás</a></li>
-                    <li class="nav-item dropdown "><a class="nav-link dropdown-toggle " href="referenciak.html " id="navbarDropdownMenuLink " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">Referenciák </a>
-                        <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink "><a class="dropdown-item " href="festmeny-restauralas.html ">Restaurálás</a><a class="dropdown-item " href="grafika.html ">Grafika</a></div>
-                    </li>
-                    <li class="nav-item "><a class="nav-link " href="olajfestmenyek.html ">Olajfestmény</a></li>
-                    <li class="nav-item "><a class="nav-link " href="mozaik.html ">Mozaik</a></li>
-                    <li class="nav-item "><a class="nav-link " href="butor.html ">Bútor</a></li>
-                    <li class="nav-item "><a class="nav-link " href="mese.html ">Mese</a></li>
-                    <li class="nav-item"><a class="nav-link" href="ajandektargyak.html ">Ajándéktárgyak</a></li>
-                    <li class="nav-item"><a class="nav-link" href="kedvencek.html ">Kedvencek</a></li>
-                    <li class="nav-item"><a class="nav-link" href="kapcsolat.html ">Kapcsolat</a></li>
-                    <li class="nav-item">
-                        <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png" alt="Facebook " id="fbikon "></a>
-                    </li>
-                    <li class="nav-item"><img src="pics\flaticons\Call\icons8-phonelink-ring-32.png" alt="Image " id="telefonikon"><span class="menu_telefonszam">06-20-482-3933</span></li>
+
+                    <div class="bottom-row">
+                        <li class="nav-item">
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png" alt="Facebook " id="fbikon "></a>
+                        </li>
+                        <li class="nav-item"><img src="pics\flaticons\Call\icons8-phonelink-ring-32.png" alt="Image " id="telefonikon"><span class="menu_telefonszam">06-20-482-3933</span></li>
                 </ul>
+
+
                 <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
                     <input type="text" placeholder="Search.." name="search2">
                     <button type="submit"><i class="fa fa-search"></i></button>
                 </form>
-
-
-
+                </div>
             </div>
-        </div>
     </nav>
     <main>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
