--- a/index.html
+++ b/index.html
@@ -29,49 +29,68 @@
         </div>
     </header>
 
-
-
-
     <nav class="navbar navbar-expand-md  navbar-dark bg-info">
-        <div class="container"><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <a class="navbar-brand" href="index.html">
-                <h1>Gólyaműhely</h1><img src="./pics/ico/ahtale2.png" class="rounded-circle" alt="golyalogo" title="Gólyaműhely" role="img" id="golyalogo"></a>
-            <div class="collapse navbar-collapse" id="hamburgermenü">
+        <div class="container">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span></button>
+        </div>
+        <a class="navbar-brand" href="index.html">
+            <h1>Gólyaműhely</h1><img src="./pics/ico/ahtale2.png" class="rounded-circle" alt="golyalogo" title="Gólyaműhely" role="img" id="golyalogo"></a>
+        <div class="collapse navbar-collapse flex-lg-column" id="hamburgermenü">
 
+            <ul class="navbar-nav">
 
-
-
-                <ul class="navbar-nav">
-                    <div class="top-row">
-                        <li class="nav-item active"><a class="nav-link " href="index.html ">Főoldal<span class="sr-only ">(current)</span></a></li>
-                        <li class="nav-item "><a class="nav-link " href="bemutatkozas.html ">Bemutatkozás</a></li>
-                        <li class="nav-item dropdown "><a class="nav-link dropdown-toggle " href="referenciak.html " id="navbarDropdownMenuLink " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">Referenciák </a>
-                            <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink "><a class="dropdown-item " href="festmeny-restauralas.html ">Restaurálás</a><a class="dropdown-item " href="grafika.html ">Grafika</a></div>
-                        </li>
-                        <li class="nav-item "><a class="nav-link " href="olajfestmenyek.html ">Olajfestmény</a></li>
-                        <li class="nav-item "><a class="nav-link " href="mozaik.html ">Mozaik</a></li>
-                        <li class="nav-item "><a class="nav-link " href="butor.html ">Bútor</a></li>
-                        <li class="nav-item "><a class="nav-link " href="mese.html ">Mese</a></li>
-                        <li class="nav-item"><a class="nav-link" href="ajandektargyak.html ">Ajándéktárgyak</a></li>
-                        <li class="nav-item"><a class="nav-link" href="kedvencek.html ">Kedvencek</a></li>
-                        <li class="nav-item"><a class="nav-link" href="kapcsolat.html ">Kapcsolat</a></li>
+                <li class="nav-item active">
+                    <a class="nav-link " href="index.html ">Főoldal<span class="sr-only ">(current)</span></a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="bemutatkozas.html ">Bemutatkozás</a>
+                </li>
+                <li class="nav-item dropdown ">
+                    <a class="nav-link dropdown-toggle " href="referenciak.html " id="navbarDropdownMenuLink " data-toggle="dropdown " aria-haspopup="true " aria-expanded="false ">Referenciák
+                        </a>
+                    <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink ">
+                        <a class="dropdown-item " href="festmeny-restauralas.html ">Restaurálás</a>
+                        <a class="dropdown-item " href="grafika.html ">Grafika</a>
                     </div>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="olajfestmenyek.html ">Olajfestmény</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="mozaik.html ">Mozaik</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="butor.html ">Bútor</a>
+                </li>
+                <li class="nav-item ">
+                    <a class="nav-link " href="mese.html ">Mese</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="ajandektargyak.html ">Ajándéktárgyak</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kedvencek.html ">Kedvencek</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="kapcsolat.html ">Kapcsolat</a>
+                </li>
 
+                <li class="nav-item">
+                    <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png" alt="Facebook " id="fbikon "></a>
+                </li>
+                <li class="nav-item"><img src="pics\flaticons\Call\icons8-phonelink-ring-32.png" alt="Image " id="telefonikon">
+                    <span class="menu_telefonszam">06-20-482-3933</span></li>
+            </ul>
 
-                    <div class="bottom-row">
-                        <li class="nav-item">
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png" alt="Facebook " id="fbikon "></a>
-                        </li>
-                        <li class="nav-item"><img src="pics\flaticons\Call\icons8-phonelink-ring-32.png" alt="Image " id="telefonikon"><span class="menu_telefonszam">06-20-482-3933</span></li>
-                </ul>
+            <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
+                <input type="text" placeholder="Keresés.." name="keresomezo">
+                <button type="submit">
+                        <i class="fa fa-search"></i>
+                    </button>
+            </form>
 
-
-                <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
-                    <input type="text" placeholder="Search.." name="search2">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-                </div>
-            </div>
+        </div>
     </nav>
     <main>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -88,17 +107,17 @@
                         <h5>Restaurálás: Akác a parton</h5>
                     </div>
                 </div>
-                <div class="carousel-item"><img class="img-fluid" src="./restauralas/keleti_setalo_utca/DSCN1314.JPG " alt="Second slide"><img class="img-fluid" class="secondSlide" src="./restauralas/keleti_setalo_utca/DSCN1313.JPG " alt="Second slide">
+                <div class="carousel-item"><img class="img-fluid" src="./restauralas/keleti_setalo_utca/DSCN1314.JPG " alt="Second slide"><img class="secondSlide" src="./restauralas/keleti_setalo_utca/DSCN1313.JPG " alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Restaurálás: Keleti sétálóutca</h5>
                     </div>
                 </div>
-                <div class="carousel-item"><img class="img-fluid" src="./restauralas/lovak_a_tengerparton/DSCN1251.JPG " alt="Third slide"><img class="img-fluid" class="secondSlide" src="./restauralas/lovak_a_tengerparton/DSCN1268.JPG " alt="Third slide">
+                <div class="carousel-item"><img class="img-fluid" src="./restauralas/lovak_a_tengerparton/DSCN1251.JPG " alt="Third slide"><img class="secondSlide" src="./restauralas/lovak_a_tengerparton/DSCN1268.JPG " alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Lovak a tengerparton</h5>
                     </div>
                 </div>
-                <div class="carousel-item"><img class="img-fluid" src="./restauralas/festmeny_tisztitas1/ilyen_volt.jpg " alt="Fourth slide"><img class="img-fluid" class="secondSlide" src=" ./restauralas/festmeny_tisztitas1/ilyen_lett.jpg" alt="Fourth slide">
+                <div class="carousel-item"><img class="img-fluid" src="./restauralas/festmeny_tisztitas1/ilyen_volt.jpg " alt="Fourth slide"><img class="secondSlide" src=" ./restauralas/festmeny_tisztitas1/ilyen_lett.jpg" alt="Fourth slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Restaurálás: Festmény-tisztítás</h5>
                     </div>
@@ -122,29 +141,58 @@
                         </h6>
                     </a>
                 </div>
-                <div class="col-sm-6 col-md-3 m-footer-nav"><strong>Fontosabb munkáim</strong>
+                <div class="col-sm-6 col-md-3 m-footer-nav">
+                    <strong>Fontosabb munkáim</strong>
                     <ul>
-                        <li><a href="olajfestmeny.html">Olajfestmény</a></li>
-                        <li><a href="grafika.html">Grafika</a></li>
-                        <li><a href="mozaik.html">Mozaik</a></li>
-                        <li><a href="butor.html">Bútor</a></li>
-                        <li><a href="mese.html">Mese</a></li>
+                        <li>
+                            <a href="olajfestmeny.html">Olajfestmény</a>
+                        </li>
+                        <li>
+                            <a href="grafika.html">Grafika</a>
+                        </li>
+                        <li>
+                            <a href="mozaik.html">Mozaik</a>
+                        </li>
+                        <li>
+                            <a href="butor.html">Bútor</a>
+                        </li>
+                        <li>
+                            <a href="mese.html">Mese</a>
+                        </li>
                     </ul>
                 </div>
-                <div class="col-sm-6 col-md-3 m-footer-nav"><strong>Referenciák</strong>
+                <div class="col-sm-6 col-md-3 m-footer-nav">
+                    <strong>Referenciák</strong>
                     <ul>
-                        <li><a href="restauralas.html">Restaurálás</a></li>
-                        <li><a href="mesegrafika.html">Mesegrafika</a></li>
+                        <li>
+                            <a href="restauralas.html">Restaurálás</a>
+                        </li>
+                        <li>
+                            <a href="mesegrafika.html">Mesegrafika</a>
+                        </li>
                     </ul>
                 </div>
-                <div class="col-sm-6 col-md-3 m-footer-nav"><strong>Információ</strong>
+                <div class="col-sm-6 col-md-3 m-footer-nav">
+                    <strong>Információ</strong>
                     <ul>
-                        <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
-                        <li><a href="gyik.html">Kérdések és válaszok</a></li>
-                        <li><a href="linkek.html">Linkek</a></li>
-                        <li><a href="ajandekok.html">Ajándéktárgyak</a></li>
-                        <li><a href="kedvencek.html">Kedvencek</a></li>
-                        <li><a href="kapcsolat.html">Kapcsolat</a></li>
+                        <li>
+                            <a href="bemutatkozas.html">Bemutatkozás</a>
+                        </li>
+                        <li>
+                            <a href="gyik.html">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html">Kedvencek</a>
+                        </li>
+                        <li>
+                            <a href="kapcsolat.html">Kapcsolat</a>
+                        </li>
                     </ul>
                 </div>
             </div>
