--- a/festmeny-restauralas.html
+++ b/festmeny-restauralas.html
@@ -28,7 +28,7 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.php">
                     Gólyaműhely<br/>
                     <img
                         src="./pics/ico/ahtale2.png"
