--- a/mozaik.html
+++ b/mozaik.html
@@ -33,7 +33,7 @@
 
 
 
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.php">
                 Gólyaműhely<br />
                 <img src = "./pics/ico/ahtale2.png" class = "rounded-circle logo" alt = "gólya" title = "Gólyaműhely" role = "img">
             </a>
