--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -26,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index.php">
                     Gólyaműhely<br/>
                     <img
                         src="./pics/ico/ahtale2.png"
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.php">Főoldal<span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
