--- a/olajfestmenyek.html
+++ b/olajfestmenyek.html
@@ -34,7 +34,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-            <a class="navbar-brand" href="index.html" id="foLogo">
+            <a class="navbar-brand" href="index.php" id="foLogo">
                     Gólyaműhely<br/>
                     <img
                         src="./pics/ico/ahtale2.png"
